Added WeatherConditionalController and written necessary exeption for it

--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -186,6 +186,9 @@
                             <constraint firstItem="6vE-cJ-xeI" firstAttribute="top" secondItem="Fgh-mO-Kls" secondAttribute="top" constant="25" id="vPl-Km-nCa"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="6vE-cJ-xeI" id="yDd-sw-maA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TNW-Ji-m3a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
