--- a/WeatherApp/WeatherApp/Cells/CustomInfoLabel/CustomInfoLabel.xib
+++ b/WeatherApp/WeatherApp/Cells/CustomInfoLabel/CustomInfoLabel.xib
@@ -11,45 +11,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="uP8-FR-CE3" customClass="CustomInfoLabel" customModule="WeatherApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.89999997615814209" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h3P-Vj-i7L">
-                    <rect key="frame" x="-5" y="-7" width="160" height="166"/>
+                    <rect key="frame" x="0.0" y="-2" width="100" height="106"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="160" id="nuN-Zq-NgO"/>
-                        <constraint firstAttribute="height" constant="160" id="s4K-dB-Vdf"/>
+                        <constraint firstAttribute="width" constant="100" id="nuN-Zq-NgO"/>
+                        <constraint firstAttribute="height" constant="100" id="s4K-dB-Vdf"/>
                     </constraints>
-                    <imageReference key="image" image="bubble.middle.bottom" catalog="system" symbolScale="large"/>
+                    <imageReference key="image" image="bubble.middle.bottom.fill" catalog="system" symbolScale="large"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="rxt-Pd-3N0">
-                    <rect key="frame" x="20" y="26" width="110" height="75"/>
+                    <rect key="frame" x="20" y="26" width="60" height="40"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHW-aO-dlQ">
-                            <rect key="frame" x="0.0" y="0.0" width="110" height="25"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fMo-rf-O4j">
-                            <rect key="frame" x="0.0" y="25" width="110" height="25"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdF-BC-oV6">
-                            <rect key="frame" x="0.0" y="50" width="110" height="25"/>
+                            <rect key="frame" x="0.0" y="0.0" width="60" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="25" id="bBQ-CW-kev"/>
+                                <constraint firstAttribute="height" constant="20" id="Ey2-jl-UKX"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHW-aO-dlQ">
+                            <rect key="frame" x="0.0" y="20" width="60" height="20"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="110" id="VLG-jG-AmH"/>
-                    </constraints>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="bBq-6g-tMU"/>
@@ -66,12 +57,11 @@
             <connections>
                 <outlet property="iconImage" destination="fMo-rf-O4j" id="iHn-zX-DYw"/>
                 <outlet property="temperatureData" destination="UHW-aO-dlQ" id="UX1-af-1Cw"/>
-                <outlet property="windSpeed" destination="mdF-BC-oV6" id="B3G-fd-8py"/>
             </connections>
             <point key="canvasLocation" x="155.07246376811597" y="537.05357142857144"/>
         </view>
     </objects>
     <resources>
-        <image name="bubble.middle.bottom" catalog="system" width="128" height="110"/>
+        <image name="bubble.middle.bottom.fill" catalog="system" width="128" height="110"/>
     </resources>
 </document>
